# ucm-azure-native-demo

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  e2e-test-report.md
.claude/: DEVELOPMENT_LOG.md  FAILED_ATTEMPTS.md  SESSION_KNOWLEDGE.md  config.yaml  deployment-context.json  settings.json
.claude/agents/: background-researcher.md  code-simplifier.md  mermaid-expert.md  verify-app.md
.claude/commands/: README.md
.claude/context/: README.md  backend.md  csharp.md  docs.md  frontend.md  go.md  infrastructure.md  java.md  python.md  rust.md  security.md  sql.md  tests.md  typescript.md
.claude/hooks/: README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  skill-request.md
.github/workflows/: ci.yml  db-migrate.yml  deploy-backend.yml  deploy-frontend.yml  deploy-functions.yml  deploy-infra.yml  integration-tests.yml  security-scan.yml  validate-skills.yml  validate-template.yml
.vite/vitest/: results.json
PRPs/: README.md
PRPs/prds/: ucm-migration-enhancements.prd.md
PRPs/specs/: ASSURANCENET_UCM_MIGRATION_SPEC.md
docs/adr/: 001-azure-blob-over-sharepoint.md  002-event-grid-for-pdf-trigger.md  003-fastapi-backend.md  (+3 more)
infra/: main.bicep  main.json
src/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
src/backend/app/: config.py  dependencies.py  main.py
src/backend/app/api/v1/: admin.py  audit.py  documents.py  explorer.py  health.py  investigations.py  pdf_merge.py  router.py  search.py
src/backend/app/db/: models.py  session.py
src/backend/app/db/migrations/: alembic.ini  env.py
src/backend/app/db/migrations/versions/: 001_initial_schema.py  002_rbac_tables.py  003_document_versioning.py  004_seed_fsis_data.py  005_system_settings.py
src/backend/app/middleware/: audit.py  auth.py  correlation.py  logging.py  rate_limit.py
src/backend/app/models/: enums.py  schemas.py
src/backend/app/services/: audit_service.py  blob_service.py  metadata_service.py  pdf_conversion_service.py  pdf_merge_service.py  rbac_service.py  settings_service.py
src/backend/app/telemetry/: setup.py
(+213 files in other folders)
